玩家redis快照和映射